<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equalSign">=</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="deleteSign">⌫</string>
    <string name="ac">AC</string>
    <string name="parentheses">( )</string>
    <string name="percentSign">%</string>
    <string name="divideSign">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplySign">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minusSign">-</string>
    <string name="plusSign">+</string>
</resources>