<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/inputBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_bar"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/resultPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calculationInputTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:letterSpacing="0.1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/default_input_text_size"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/preliminaryResultTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:letterSpacing="0.1"
                android:textColor="@color/veryLightGrey"
                android:textSize="36sp" />

        </LinearLayout>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="4dp">

            <Button
                android:id="@+id/clearB"
                style="@style/button_style"
                android:backgroundTint="@color/orange"
                android:text="@string/ac" />

            <Button
                android:id="@+id/parenthesesB"
                style="@style/button_style"
                android:text="@string/parentheses" />

            <Button
                android:id="@+id/percentB"
                style="@style/button_style"
                android:text="@string/percentSign" />

            <Button
                android:id="@+id/divideB"
                style="@style/operator_button_style"
                android:text="@string/divideSign" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="4dp">

            <Button
                android:id="@+id/sevenB"
                style="@style/digit_button_style"
                android:text="@string/_7" />

            <Button
                android:id="@+id/eightB"
                style="@style/digit_button_style"
                android:text="@string/_8" />

            <Button
                android:id="@+id/nineB"
                style="@style/digit_button_style"
                android:text="@string/_9" />

            <Button
                android:id="@+id/multiplyB"
                style="@style/operator_button_style"
                android:text="@string/multiplySign" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="4dp">

            <Button
                android:id="@+id/fourB"
                style="@style/digit_button_style"
                android:text="@string/_4" />

            <Button
                android:id="@+id/fiveB"
                style="@style/digit_button_style"
                android:text="@string/_5" />

            <Button
                android:id="@+id/sixB"
                style="@style/digit_button_style"
                android:text="@string/_6" />

            <Button
                android:id="@+id/subtractB"
                style="@style/operator_button_style"
                android:text="@string/minusSign" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="4dp">

            <Button
                android:id="@+id/oneB"
                style="@style/digit_button_style"
                android:text="@string/_1" />

            <Button
                android:id="@+id/twoB"
                style="@style/digit_button_style"
                android:text="@string/_2" />

            <Button
                android:id="@+id/threeB"
                style="@style/digit_button_style"
                android:text="@string/_3" />

            <Button
                android:id="@+id/plusB"
                style="@style/operator_button_style"
                android:text="@string/plusSign" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="12dp">

            <Button
                android:id="@+id/zeroB"
                style="@style/digit_button_style"
                android:text="@string/_0" />

            <Button
                android:id="@+id/commaB"
                style="@style/button_style"
                android:text="@string/comma" />

            <Button
                android:id="@+id/deleteB"
                style="@style/button_style"
                android:text="@string/deleteSign" />

            <Button
                android:id="@+id/equalB"
                style="@style/button_style"
                android:text="@string/equalSign" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>